data/test/type_check/fail/array_10.v
reg r = 1;
wire[3:0] w[3:0];

assign w[r][0] = 1;
